Updated AbstractAutoUpdater so that the class path in the autoupdateable configuration uses relative file paths.